cmake_minimum_required(VERSION 3.27)

project(AllChapters)
add_subdirectory(Chapter01)
add_subdirectory(Chapter02)
add_subdirectory(Chapter03)
add_subdirectory(Chapter04)
add_subdirectory(Chapter05)
add_subdirectory(Chapter06)
add_subdirectory(Chapter07)
add_subdirectory(Chapter08)
add_subdirectory(Chapter09)
add_subdirectory(Chapter10)
add_subdirectory(Chapter11)
add_subdirectory(Chapter12)
add_subdirectory(Chapter13)
add_subdirectory(Chapter14)
add_subdirectory(Chapter15)
add_subdirectory(Chapter16)
add_subdirectory(Chapter17)
add_subdirectory(Chapter18)
add_subdirectory(Chapter19)
add_subdirectory(Chapter20)
add_subdirectory(Chapter21)
